# shell-mcp

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: main.rs  pest_parser.rs  shell.pest  shell.rs
