[package]
name = "shell-mcp"
version = "0.1.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "0.6.1", features = [ "base64",  "macros", "server", "transport-async-rw",  "elicitation", "transport-sse-server", "transport-streamable-http-server", "transport-io", "schemars"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
tokio-util = "0.7"
axum = "0.8"
pest = "2.8"
pest_derive = "2.8"
shlex = "1.3"
